--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Home h1 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Home {
+  background-color: black;
+}
+/* components */
+.nav-item {
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner {
+  height: 600px;
+  display: flex;
+  align-items: center;
+}
+
+.banner::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  content: '';
+  background: linear-gradient(to right, black, transparent);
+}
+
+.banner-info {
+  color: white;
+  width: 40%;
+  margin-left: 30px;
+  z-index: 1;
+}
+
+.card {
+  width: 300px;
+  height: 200px;
+}
+
+.overlay {
+  color: white;
+  opacity: 0;
+  background: rgba(43, 41, 41, 0.9);
+  width: 100%;
+  height: 100%;
+}
+
+.card:hover .overlay {
+  opacity: 1;
 }
