--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,13 @@
 .Home {
   background-color: black;
 }
+
+
 /* components */
+
+/* Navigation */
+
+
 .nav-item {
   color: white;
   text-decoration: none;
@@ -17,6 +23,8 @@
   display: flex;
   align-items: center;
 }
+
+/* Banner */
 
 .banner::before {
   position: absolute;
@@ -34,6 +42,8 @@
   z-index: 1;
 }
 
+/* MovieCard */
+
 .card {
   width: 300px;
   height: 200px;
@@ -50,3 +60,13 @@
 .card:hover .overlay {
   opacity: 1;
 }
+
+/* MoviePoster */
+
+/* .detail {
+  display: flex;
+  justify-content: center;
+}
+.poster {
+  background: no-repeat;
+} */
